Rest: settings - block_content_max_size added
