# doc/openapi.yaml
@@ -601,7 +601,7 @@ paths:
             application/json:
               schema:
                 type: object
-                required: [block0Hash, block0Time, consensusVersion, fees, maxTxsPerBlock, slotDuration, slotsPerEpoch, rewardParams, treasuryTax]
+                required: [block0Hash, block0Time, blockContentMaxSize, consensusVersion, fees, slotDuration, slotsPerEpoch, rewardParams, treasuryTax]
                 properties:
                   block0Hash:
                     description: Hex-encoded hash of block0
@@ -611,6 +611,10 @@ paths:
                     description: When block0 was created
                     type: string
                     format: date-time
+                  blockContentMaxSize:
+                    description: The block content's max size in bytes
+                    type: integer
+                    minimum: 1
                   consensusVersion:
                     description: Version of consensus, which is currently used
                     type: string
@@ -653,10 +657,6 @@ paths:
                         description: Base fee per transaction
                         type: integer
                         minimum: 0
-                  maxTxsPerBlock:
-                    description: Maximum number of transactions in block
-                    type: integer
-                    minimum: 0
                   rewardParams:
                     description: Parameters for rewards calculation
                     type: object
@@ -730,6 +730,7 @@ paths:
                 {
                   "block0Hash": "8d94ecfcc9a566f492e6335858db645691f628b012bed4ac2b1338b5690355a7",
                   "block0Time": "2019-07-09T12:32:51+00:00",
+                  "blockContentMaxSize": 102400,
                   "consensusVersion": "bft",
                   "currSlotStartTime": "2019-07-18T22:01:17+00:00",
                   "fees": {
@@ -742,7 +743,6 @@ paths:
                     "coefficient": 1,
                     "constant": 2
                   },
-                  "maxTxsPerBlock": 100,
                   "rewardParams": {
                       "compoundingRatio": {
                           "denominator": 1024,
