# jormungandr/src/rest/v0/handlers.rs
@@ -295,6 +295,7 @@ pub fn get_settings(context: State<Context>) -> ActixFuture!() {
             let consensus_version = ledger.consensus_version();
             let current_params = blockchain_tip.epoch_ledger_parameters();
             let fees = current_params.fees;
+            let block_content_max_size = current_params.block_content_max_size;
             let slots_per_epoch = blockchain_tip
                 .epoch_leadership_schedule()
                 .era()
@@ -309,7 +310,7 @@ pub fn get_settings(context: State<Context>) -> ActixFuture!() {
                     .map(SystemTime::from),
                 consensus_version: consensus_version.to_string(),
                 fees: fees,
-                max_txs_per_block: 255, // TODO?
+                block_content_max_size: block_content_max_size,
                 slot_duration: blockchain_tip.time_frame().slot_duration(),
                 slots_per_epoch,
                 treasury_tax: current_params.treasury_tax,
